--- a/online-zoo/pages/map/map.css
+++ b/online-zoo/pages/map/map.css
@@ -95,7 +95,7 @@ html {
   padding: 15px;
 }
 .button:hover {
-  opacity: 80%;
+  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
 }
 .button:active {
   background: #5eac0b;
@@ -105,23 +105,20 @@ html {
 
 /* Map */
 .map-container {
-  min-height: calc(100vh - 270px);
-  padding-top: 4%;
+  padding-top: 80px;
   padding-bottom: 1.3%;
+  display: flex;
+  justify-content: center;
 }
 .map {
   position: relative;
+}
+.map-svg {
   overflow: hidden;
   margin: 0 auto;
-  max-width: 1920px;
-  width: 100%;
-  max-height: 945px;
-  height: 100%;
-}
-.map-img {
-  align-items: center;
-  max-width: 1920px;
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 945px;
 }
 .map__icon-container {
   width: 64px;
@@ -134,20 +131,20 @@ html {
   position: absolute;
 }
 .map__pet--eagle {
-  margin-top: -23.4%;
-  margin-left: 23.6%;
+  left: 75px;
+  top: 500px;
 }
 .map__pet--alligator {
-  margin-top: -22.9%;
-  margin-left: 35.4%;
+  left: 300px;
+  top: 505px;
 }
 .map__pet--gorilla {
-  margin-top: -17.6%;
-  margin-left: 53.8%;
+  left: 655px;
+  top: 610px;
 }
 .map__pet--panda {
-  margin-top: -22.7%;
-  margin-left: 67.7%;
+  left: 920px;
+  top: 510px;
 }
 .map__pet-name {
   font-size: 15px;
@@ -270,16 +267,18 @@ html {
   line-height: 19px;
 }
 .zoom {
-  position: absolute;
+  position: sticky;
   display: flex;
   flex-flow: column;
-  background-color: #fff;
   justify-content: center;
   text-align: center;
+  float: right;
   width: 32px;
   height: 80px;
-  margin-top: -9.3%;
-  margin-left: 97.2%;
+  z-index: 1;
+  bottom: 200px;
+  margin-bottom: 100px;
+  margin-right: 20px;
   filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
 }
 .zoom-in {
@@ -288,13 +287,10 @@ html {
   cursor: pointer;
   width: 32px;
   height: 40px;
-  font-size: 27px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   background-color: #fff;
   border-top: 1px solid #000;
-}
-.zoom-in:hover,
-.zoom-out:hover {
-  opacity: 50%;
 }
 .zoom-in:active {
   transform: scale(0.8);
@@ -312,7 +308,9 @@ html {
   cursor: pointer;
   width: 32px;
   height: 40px;
-  font-size: 40px;
+  font-family: monospace;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   background-color: #fff;
   border-bottom: 1px solid #000;
 }
@@ -334,7 +332,7 @@ html {
   background-size: cover;
 }
 .footer-content {
-  padding-top: 5px;
+  padding-top: 10px;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -395,4 +393,18 @@ html {
   width: 100%;
   align-self: flex-end;
   cursor: default;
+}
+
+@media screen and (max-width: 1440px)  {
+
+  .zoom {
+    bottom: 100px;
+  }
+  .footer-content {
+    margin-top: 10px;
+  }
+  .footer-copyright {
+    margin-bottom: 5px;
+  }
+
 }
