--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -146,8 +146,9 @@ html {
 .content {
   padding-top: 100px;
 }
-.pets-box {
+.pets-wrapper {
   max-width: 1370px;
+  height: 577px;
   width: 100%;
   margin: 0 auto;
   background-image: url(../../assets/images/pets-parallax/background.png);
@@ -156,41 +157,39 @@ html {
 }
 .pets {
   display: flex;
+  margin: 0 auto;
   flex: 0 0 100%;
   list-style: none;
-  padding-top: 200px;
+  padding-top: 80px;
   padding-bottom: 1.4em;
   align-items: center;
-  transform: matrix(1, 0, 0, 1, 0, -75);
+  overflow: hidden;
+  justify-content: center;
+  height: 555px;
 }
 .pet-image {
   width: 250px;
-  height: 350px;
 }
 .eagle {
   z-index: 0;
-  transform: scale(1);
-  margin-left: calc(18% - 250px); 
+  transform: scaleX(1) scaleY(1.1) translateX(-24%);
 }
 .tiger {
   z-index: 1;
-  transform: scale(1.13);
-  margin-left: calc(18% - 250px);
+  transform: translateX(-20%) scaleX(1.23) scaleY(1.23);
 }
 .panda {
   z-index: 2;
-  transform: scale(1.4, 1.3);
-  margin-left: calc(18% - 185px);
+  transform: scaleX(1.399) scaleY(1.399) translateX(0%);
 }
 .monkey {
   z-index: 1;
-  transform: scale(1.13);
-  margin-left: calc(18% - 185px);
+  transform: translateX(20%) scaleX(1.23) scaleY(1.23);
 }
 .elephant {
   z-index: 0;
   transform: scale(1);
-  margin-left: calc(18% - 250px);
+  transform: scaleX(1) scaleY(1.1) translateX(24%);
 }
 .pets-images__article {
   margin: 0 auto;
@@ -297,6 +296,11 @@ html {
   max-width: 1051px;
   width: 100%;
   padding-bottom: 97px;
+  background-image: url(../../assets/icons/pay/arrow.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position-y: -120px;
+  background-position-x: 210px;
 }
 .arrow-icon {
   position: absolute;
@@ -396,7 +400,7 @@ html {
   background-size: cover;
 }
 .footer-content {
-  padding-top: 10px;
+  padding-top: 5px;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -409,6 +413,9 @@ html {
 }
 .footer-logo {
   transform: matrix(0.85, 0, 0, 0.85, -9, 0);
+}
+.donate__button--right {
+  display: none;
 }
 .button--donate {
   width: 230px;
@@ -438,7 +445,7 @@ html {
 .footer-credentials {
   display: flex;
   justify-content: space-between;
-  padding-top: 55px;
+  padding-top: 60px;
 }
 .schools-logo {
   display: flex;
@@ -460,34 +467,250 @@ html {
 }
 
 @media screen and (max-width: 1440px) {
-
   .eagle {
     z-index: 0;
-  transform: scale(1);
-  margin-left: calc(22% - 250px); 
+    transform: scaleX(1) scaleY(1.1) translateX(16%);
   }
   .tiger {
     z-index: 1;
-    transform: scale(1.14);
-    margin-left: calc(16.5% - 250px);
+    transform: translateX(-2%) scaleX(1.23) scaleY(1.23);
   }
   .panda {
     z-index: 2;
-    transform: scale(1.4, 1.28);
-    margin-left: calc(16.5% - 185px);
+    transform: scaleX(1.399) scaleY(1.399) translate(-4.5%);
   }
   .monkey {
     z-index: 1;
-    transform: scale(1.14);
-    margin-left: calc(16.5% - 185px);
+    transform: translateX(-13%) scaleX(1.23) scaleY(1.23);
   }
   .elephant {
     z-index: 0;
-    transform: scale(1);
-    margin-left: calc(16.5% - 250px);
+    transform: scaleX(1) scaleY(1.1) translateX(-16%);
   }
   .cards {
     grid-gap: 25px 20px;
   }
+}
 
+@media screen and (max-width: 1199px) {
+  .slider-box {
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 730px;
+    width: 100%;
+    margin: 0 auto;
+    grid-gap: 30px 20px;
+  }
+  .arrow-left {
+    order: 2;
+    flex-flow: row;
+  }
+  .arrow-right {
+    order: 3;
+    flex-flow: row;
+  }
+  .cards {
+    order: 1;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .card-wrapper:nth-child(4) {
+    display: none;
+  }
+  .card-wrapper:nth-child(8) {
+    display: none;
+  }
+  .pets-in-zoo__button {
+    margin-top: 50px;
+  }
+  .feedback-slider-box {
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 730px;
+    width: 100%;
+    margin: 0 auto;
+    grid-gap: 30px 20px;
+  }
+  .feedback__slides {
+    padding: 0 10px;
+  }
+  .feedback__card:nth-child(4) {
+    display: none;
+  }
+  .card-info {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 25px;
+  }
+  .feedback__card-caption {
+    width: 50px;
+  }
+  .person-name {
+    width: 90px;
+  }
+  .feedback__button {
+    padding-top: 45px;
+  }
+  .leave-feedback__button {
+    width: 225px;
+  }
+}
+
+@media screen and (max-width: 1030px) {
+  .pay-and-feed__icons {
+    background-position-y: -100px;
+    background-position-x: 215px;
+    background-size: 600px;
+  }
+}
+
+@media screen and (max-width: 1010px) {
+  .pay-and-feed__icons {
+    background-position-y: -90px;
+    background-position-x: 210px;
+    background-size: 580px;
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .pets-images__text {
+    padding-top: 5px;
+  }
+  .slider-box {
+    padding: 0 20px;
+  }
+  .icon__caption {
+    max-width: 190px;
+    margin: 0 auto;
+    margin-top: -43px;
+  }
+  .footer-background {
+    height: 383px;
+  }
+  .footer {
+    height: 330px;
+  }
+  .footer-content {
+    padding: 5px 20px;
+  }
+  .footer-links__logo-button {
+    max-width: 102px;
+    width: 100%;
+  }
+  .donate__button--left {
+    display: none;
+  }
+  .donate__button--right {
+    display: block;
+  }
+  .button--donate {
+    width: 280px;
+  }
+  .footer-menu {
+    row-gap: 16px;
+    column-gap: 50px;
+  }
+  .footer-credentials {
+    flex-wrap: wrap;
+    padding: 45px 20px 0;
+  }
+  .schools-logo {
+    max-width: 360px;
+  }
+  .footer-copyright {
+    padding-top: 45px;
+    display: flex;
+    flex-flow: column;
+    text-align: center;
+  }
+  .copyright {
+    order: 2;
+    padding: 10px 0;
+  }
+  .designer {
+    order: 1;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .eagle,
+  .elephant {
+    display: none;
+  }
+  .tiger {
+    transform: translateX(0%) scaleX(1.23) scaleY(1.23);
+  }
+  .panda {
+    transform: scaleX(1.399) scaleY(1.399) translate(0%);
+  }
+  .monkey {
+    transform: translateX(0%) scaleX(1.23) scaleY(1.23);
+  }
+  .pay-and-feed__icons {
+    background-image: url(../../assets/icons/pay/arrow-circle.svg);
+    flex-wrap: wrap;
+    padding-top: 90px;
+    justify-content: center;
+    background-position: center;
+    background-position-x: 119px;
+    height: 545px;
+  }
+  .heading--testimonials {
+    padding-top: 232px;
+  }
+  .button--donate {
+    width: 210px;
+  }
+  .footer-links__links {
+    max-width: 447px;
+    width: 100%;
+    padding-top: 2px;
+  }
+  .footer-menu {
+    row-gap: 16px;
+    column-gap: 15px;
+  }
+  .footer-credentials {
+    flex-wrap: wrap;
+    padding: 45px 20px 0;
+  }
+  .schools-logo {
+    max-width: 310px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .header__content {
+    max-width: 590px;
+    padding-top: 10px;
+    padding-left: 18px;
+  }
+  .hero {
+    height: calc(100vh + 23px);
+    background: url(../../assets/images/hero/hero-640.png), radial-gradient(71.89% 152.21% at 40.1% 50%, #b5e6ff 0%, #59c3fb 100%);
+  }
+  .watch-your-favourite-animal__content {
+    max-width: 425px;
+    padding-top: 150px;
+    padding-left: 18px;
+  }
+  .hero-heading {
+    font-size: 50px;
+    line-height: 60px;
+  }
+  .button--play {
+    width: 187px;
+  }
+  .how-it-works__container,
+  .pets-box,
+  .pets-wrapper {
+    max-width: 640px;
+  }
+  .pets-images__article {
+    max-width: 536px;
+  }
+  .icon__caption {
+    max-width: 190px;
+    margin: 0 auto;
+    margin-top: -43px;
+  }
 }
