--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -12,6 +12,10 @@
   font-family: 'SceneW01-Black';
   src: url(../../fonts/SceneW01-Black.ttf);
 }
+@font-face {
+  font-family: 'Rubik';
+  src: url(../../fonts/Rubik/static/Rubik-Regular.ttf);
+}
 html {
   box-sizing: border-box;
 }
@@ -84,6 +88,9 @@ html {
 .menu__link--active {
   pointer-events: none;
   text-shadow: #70cb0e 0 0 2px, #70cb0e 0 0 2px, #70cb0e 0 0 2px, #70cb0e 0 0 2px;
+}
+.menu__burger {
+  display: none;
 }
 
 /* Watch you favourite animal block */
@@ -408,7 +415,7 @@ html {
 .footer-links__logo-button {
   display: flex;
   justify-content: space-between;
-  max-width: 430px;
+  max-width: 50px;
   width: 100%;
 }
 .footer-logo {
@@ -539,7 +546,7 @@ html {
   .card-info {
     display: flex;
     align-items: flex-start;
-    margin-bottom: 25px;
+    margin-bottom: 22px;
   }
   .feedback__card-caption {
     width: 50px;
@@ -712,5 +719,304 @@ html {
     max-width: 190px;
     margin: 0 auto;
     margin-top: -43px;
+  }
+}
+
+@media screen and (max-width: 639px) {
+  .pay-and-feed__icons {
+    background-image: none;
+    padding-top: 75px;
+    height: calc(100vh + 308px);
+  }
+  .icon-zoo {
+    position: relative;
+    padding: 80px 0 3px 0;
+  }
+  .icon-zoo::after,
+  .icon-zoo::before {
+    content: url(../../assets/icons/pay/arrow-down.png);
+    position: relative;
+    left: 165px;
+  }
+  .icon-zoo::after {
+    top: 22px;
+  }
+  .icon-zoo::before {
+    bottom: 260px;
+  }
+  .heading--testimonials {
+    padding-top: 232px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header__content {
+    padding-left: 10px;
+  }
+  .nav {
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 300px;
+    transform: translate(100%, 0px);
+    background-color: #a7e1ff;
+    padding: 40px 30px 30px 30px;
+    transition: all 0.3s ease 0s;
+    overflow: auto;
+  }
+  .nav--active {
+    transform: translate(0px, 0px);
+  }
+  .menu__burger {
+    z-index: 5;
+    display: block;
+    position: relative;
+    width: 36px;
+    height: 22px;
+    cursor: pointer;
+    right: 10px;
+    top: 18px;
+  }
+  .menu__burger::before,
+  .menu__burger::after {
+    content: '';
+  }
+  .menu__burger::before {
+    top: 0px;
+  }
+  .menu__burger::after {
+    bottom: 0px;
+  }
+  .menu__burger span {
+    top: 10px;
+  }
+  .menu__burger::before,
+  .menu__burger::after,
+  .menu__burger span {
+    height: 2px;
+    width: 100%;
+    position: absolute;
+    background: #000;
+    margin: 0 auto;
+  }
+  .menu {
+    flex-flow: column;
+    max-height: 222px;
+    height: 100%;
+  }
+  .menu__item:not(:first-child) {
+    padding-bottom: 20px;
+  }
+  .menu__link {
+    font-family: 'Rubik';
+    font-size: 22px;
+    line-height: 28.6px;
+  }
+  .menu__item--cross {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    cursor: pointer;
+    top: 10px;
+    right: 25px;
+  }
+  .menu__item--cross:after {
+    content: '';
+    height: 40px;
+    border-left: 1px solid #000;
+    position: absolute;
+    transform: rotate(45deg);
+    left: 28px;
+  }
+  .menu__item--cross:before {
+    content: '';
+    height: 40px;
+    border-left: 1px solid #000;
+    position: absolute;
+    transform: rotate(-45deg);
+    left: 28px;
+  }
+  .hero {
+    background: url(../../assets/images/hero/hero-320.png), radial-gradient(71.89% 152.21% at 40.1% 50%, #b5e6ff 0%, #59c3fb 100%);
+  }
+  .watch-your-favourite-animal__content {
+    max-width: 220px;
+    width: 100%;
+    padding-left: 10px;
+  }
+  .button--play {
+    width: 220px;
+  }
+  .eagle {
+    display: block;
+    z-index: 4;
+    transform: scaleX(0.56) scaleY(0.66) translateX(310%) translateY(-39%);
+  }
+  .tiger {
+    z-index: 3;
+    transform: translateX(23%) scaleX(0.64) scaleY(0.66) translateY(-56%);
+  }
+  .panda {
+    z-index: 5;
+    transform: scaleX(0.56) scaleY(0.66) translateX(-131%) translateY(39%);
+  }
+  .monkey {
+    z-index: 3;
+    transform: translateX(-122%) scaleX(0.64) scaleY(0.66) translateY(55%);
+  }
+  .pets-images__article {
+    max-width: 300px;
+    padding-top: 25px;
+  }
+  .pets-images__text {
+    line-height: 21px;
+  }
+  .slider-box__wrapper {
+    padding-top: 4.2em;
+  }
+  .slider-box {
+    padding: 0 10px;
+  }
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 25px 20px;
+  }
+  .card-wrapper:nth-child(7),
+  .card-wrapper:nth-child(2) {
+    display: none;
+  }
+  .card-wrapper:nth-child(3),
+  .card-wrapper:nth-child(5) {
+    display: block;
+  }
+  .card-image {
+    transform: translateX(-35px);
+  }
+  .card-caption {
+    max-width: 90px;
+    left: 25px;
+  }
+  .choose-your-favourite__button {
+    width: 300px;
+  }
+  .feedback-slider-box {
+    max-width: 300px;
+  }
+  .feedback__slides {
+    flex-flow: column;
+    padding: 0;
+  }
+  .feedback__card {
+    max-width: 300px;
+    width: 100%;
+    padding: 24px 20px 22px;
+    margin: 15px 10px 0px;
+    min-height: fit-content;
+  }
+  .feedback__card:nth-child(3) {
+    display: none;
+  }
+  .feedback__card-caption,
+  .person-name {
+    width: 200px;
+  }
+  .feedback__card-caption,
+  .person-name,
+  .person-donation {
+    padding-left: 4px;
+  }
+  .feedback__button {
+    padding-top: 50px;
+  }
+  .footer-background {
+    height: 816px;
+    background-size: inherit;
+  }
+  .footer {
+    height: calc(100vh + 85px);
+  }
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-links__logo-button {
+    align-self: center;
+  }
+  .footer-links__links {
+    flex-flow: column;
+  }
+  .footer-nav {
+    padding-top: 37px;
+  }
+  .footer-menu {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 36px);
+    grid-row-gap: 0px;
+  }
+  .footer-menu-item:nth-child(2) {
+    grid-row: 3;
+  }
+  .footer-menu-item:nth-child(3) {
+    grid-row: 2;
+  }
+  .menu__link--footer {
+    font-family: 'Roboto';
+    font-size: 18px;
+  }
+  .socials {
+    order: 3;
+    align-self: center;
+    padding-top: 10px;
+  }
+  .footer-credentials {
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-left: 10px;
+  }
+  .schools-logo {
+    padding: 0;
+    order: 1;
+    position: relative;
+  }
+  .yd-logo {
+    padding-left: 60px;
+  }
+  .donate__button--right {
+    display: none;
+  }
+  .donate__button--left {
+    display: block;
+    order: 2;
+    width: 213px;
+    margin: 0 auto;
+    padding: 40px 0;
+  }
+  .button--donate {
+    padding: 13px 16.5px;
+  }
+  .footer-copyright {
+    order: 2;
+    padding-top: 58px;
+    padding-left: 5px;
+  }
+  .copyright {
+    order: 2;
+    width: 90%;
+    padding-top: 2px;
+    padding-left: 32px;
+  }
+  .copyright span {
+    display: none;
+  }
+  .designer {
+    order: 1;
+    margin: -13px 60px 8px;
+  }
+  .footer-copy-text {
+    width: 90%;
   }
 }
