--- a/online-zoo/pages/zoos/eagle/eagle.css
+++ b/online-zoo/pages/zoos/eagle/eagle.css
@@ -8,6 +8,10 @@
   src: url(../../../fonts/Roboto/Roboto-Medium.ttf);
   font-weight: 500;
 }
+@font-face {
+  font-family: 'Rubik';
+  src: url(../../fonts/Rubik/static/Rubik-Regular.ttf);
+}
 html {
   box-sizing: border-box;
 }
@@ -250,6 +254,9 @@ html {
   grid-column: 4;
   grid-row: 2 / 3;
 }
+.button--feed {
+  display: none;
+}
 
 /* Info block */
 .info-container {
@@ -257,22 +264,19 @@ html {
 }
 .info-block {
   display: grid;
-  grid-gap: 20px;
   background-color: #a7e1ff;
   width: inherit;
-  padding-top: 10px;
-  padding-bottom: 11px;
+  margin: 30px 0 20px 0;
+  padding: 20px 0;
 }
 .info1 {
   grid-column: 1;
   grid-row: 1;
-  padding-left: 20px;
   width: 570px;
 }
 .info2 {
   grid-row: 1;
   grid-column: 2;
-  padding-left: 20px;
   width: 570px;
 }
 .spoilers {
@@ -281,14 +285,19 @@ html {
 }
 .spoiler-details {
   background: #a7e1ff;
+  margin-bottom: 20px;
   width: 570px;
-  overflow: hidden;
+  position: relative;
+  font-size: 16px;
+  line-height: 19px;
 }
 .spoiler-details:not([open]) {
   height: 61px;
+  padding: 20px;
 }
 .spoiler-details[open] {
   min-height: 142px;
+  padding: 20px 80px 20px 20px;
 }
 .spoiler-details1 {
   grid-row: 2;
@@ -317,35 +326,27 @@ html {
 }
 .spoiler-summary {
   display: block;
-  padding-top: 20px;
-  margin-left: 20px;
-  padding-bottom: 20px;
-  cursor: pointer;
-  position: relative;
+  font-size: 16px;
+  line-height: 19px;
   text-transform: uppercase;
+  margin-bottom: 7px;
 }
-.spoiler-summary:before {
-  top: 10%;
-  left: 88.7%;
+.spoiler-summary:after {
+  top: 50%;
+  right: 0;
+  margin-right: 20px;
   color: transparent;
   background: url(../../../assets/icons/buttons/arrow-right.svg) no-repeat 50% 50% / 45px 45px;
-  transform: rotate(90deg);
+  transform: translateY(-50%) rotate(90deg);
   width: 45px;
   height: 45px;
   content: '';
   position: absolute;
+  cursor: pointer;
   transition: transform 0.5s;
 }
-.spoiler-details[open] .spoiler-summary:before {
-  transform: rotate(-90deg);
-  top: 85%;
-  left: 88.7%;
-}
-.spoiler-content {
-  width: 470px;
-  margin-left: 20px;
-  margin-top: -11px;
-  padding-bottom: 3%;
+.spoiler-details[open] .spoiler-summary:after {
+  transform: translateY(-50%) rotate(-90deg);
 }
 .spoiler-details[open] .spoiler-text {
   animation: sweep 0.5s ease-in-out;
@@ -387,7 +388,7 @@ html {
 .footer-links__logo-button {
   display: flex;
   justify-content: space-between;
-  max-width: 430px;
+  max-width: 50px;
   width: 100%;
 }
 .footer-logo {
@@ -504,20 +505,16 @@ html {
     max-width: 600px;
   }
   .info-block {
-    margin-top: 25px;
-    max-width: 600px;
-    grid-row-gap: 0;
+    padding-top: 20px;
+    padding-bottom: 10px;
   }
   .info {
     padding-top: 10px;
+    padding-left: 10px;
   }
   .info2 {
     grid-column: 1;
     grid-row: 2;
-    padding-bottom: 10px;
-  }
-  .spoilers {
-    margin-top: 20px;
   }
   .spoiler-details {
     width: 100%;
@@ -625,5 +622,253 @@ html {
   }
   .footer {
     height: 335px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .header__content {
+    padding-left: 10px;
+  }
+  .nav {
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 300px;
+    transform: translate(100%, 0px);
+    background-color: #a7e1ff;
+    padding: 40px 30px 30px 30px;
+    transition: all 0.3s ease 0s;
+    overflow: auto;
+  }
+  .nav--active {
+    transform: translate(0px, 0px);
+  }
+  .menu__burger {
+    z-index: 5;
+    display: block;
+    position: relative;
+    width: 36px;
+    height: 22px;
+    cursor: pointer;
+    right: 10px;
+    top: 18px;
+  }
+  .menu__burger::before,
+  .menu__burger::after {
+    content: '';
+  }
+  .menu__burger::before {
+    top: 0px;
+  }
+  .menu__burger::after {
+    bottom: 0px;
+  }
+  .menu__burger span {
+    top: 10px;
+  }
+  .menu__burger::before,
+  .menu__burger::after,
+  .menu__burger span {
+    height: 2px;
+    width: 100%;
+    position: absolute;
+    background: #000;
+    margin: 0 auto;
+  }
+  .menu {
+    flex-flow: column;
+    max-height: 222px;
+    height: 100%;
+  }
+  .menu__item:not(:first-child) {
+    padding-bottom: 20px;
+  }
+  .menu__link {
+    font-family: 'Rubik';
+    font-size: 22px;
+    line-height: 28.6px;
+  }
+  .menu__item--cross {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    cursor: pointer;
+    top: 10px;
+    right: 25px;
+  }
+  .menu__item--cross:after {
+    content: '';
+    height: 40px;
+    border-left: 1px solid #000;
+    position: absolute;
+    transform: rotate(45deg);
+    left: 28px;
+  }
+  .menu__item--cross:before {
+    content: '';
+    height: 40px;
+    border-left: 1px solid #000;
+    position: absolute;
+    transform: rotate(-45deg);
+    left: 28px;
+  }
+  .sidebar-icon:nth-child(5) {
+    display: none;
+  }
+  .video-container {
+    max-width: 320px;
+  }
+  .playlist {
+    display: grid;
+    grid-template-rows: 3;
+    grid-template-columns: 2;
+    padding: 0 10px;
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+  }
+  .main-item {
+    grid-column: 1 / 3;
+    grid-row: 1;
+    width: 300px;
+    height: 169px;
+  }
+  .playlist__item:not(.main-item) {
+    width: 140px;
+    height: 82px;
+    margin: 0 auto;
+  }
+  .item1 {
+    grid-row: 3;
+    grid-column: 1;
+  }
+  .item2 {
+    grid-row: 3;
+    grid-column: 2;
+  }
+  .item3 {
+    grid-row: 4;
+    grid-column: 1;
+  }
+  .item4 {
+    grid-row: 4;
+    grid-column: 2;
+  }
+  .feed__button {
+    align-self: center;
+    grid-row: 2;
+    grid-column: 1 / 3;
+  }
+  .button--feed {
+    display: block;
+    width: 300px;
+  }
+  .info-container {
+    max-width: 300px;
+  }
+  .info-block {
+    max-width: 300px;
+    margin: 30px 0 24px;
+  }
+  .text {
+    max-width: 300px;
+    padding: 10px 10px 5px;
+  }
+  .spoilers {
+    width: 300px;
+    grid-gap: 0;
+  }
+  .spoiler-details[open] {
+    min-height: 100px;
+    width: 300px;
+  }
+  .footer-background {
+    height: 816px;
+    background-size: inherit;
+  }
+  .footer {
+    height: calc(100vh + 85px);
+  }
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-links__logo-button {
+    align-self: center;
+  }
+  .footer-links__links {
+    flex-flow: column;
+  }
+  .footer-nav {
+    padding-top: 37px;
+  }
+  .footer-menu {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 36px);
+    grid-row-gap: 0px;
+  }
+  .footer-menu-item:nth-child(2) {
+    grid-row: 3;
+  }
+  .footer-menu-item:nth-child(3) {
+    grid-row: 2;
+  }
+  .menu__link--footer {
+    font-family: 'Roboto';
+    font-size: 18px;
+  }
+  .socials {
+    order: 3;
+    align-self: center;
+    padding-top: 10px;
+  }
+  .footer-credentials {
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-left: 10px;
+  }
+  .schools-logo {
+    padding: 0;
+    order: 1;
+    position: relative;
+  }
+  .yd-logo {
+    padding-left: 60px;
+  }
+  .donate__button--right {
+    display: none;
+  }
+  .donate__button--left {
+    display: block;
+    order: 2;
+    width: 213px;
+    margin: 0 auto;
+    padding: 40px 0;
+  }
+  .button--donate {
+    padding: 13px 16.5px;
+  }
+  .footer-copyright {
+    order: 2;
+    padding-top: 58px;
+    padding-left: 5px;
+  }
+  .copyright {
+    order: 2;
+    width: 90%;
+    padding-top: 2px;
+    padding-left: 32px;
+  }
+  .copyright span {
+    display: none;
+  }
+  .designer {
+    order: 1;
+    margin: -13px 60px 8px;
+  }
+  .footer-copy-text {
+    width: 90%;
   }
 }
