--- a/online-zoo/pages/map/map.css
+++ b/online-zoo/pages/map/map.css
@@ -115,6 +115,7 @@ html {
 .map-container {
   padding-top: 80px;
   padding-bottom: 1.3%;
+  overflow: hidden;
   display: flex;
   justify-content: center;
 }
@@ -388,7 +389,7 @@ html {
 .footer-links__links {
   display: flex;
   justify-content: space-between;
-  max-width: 570px;
+  max-width: 962px;
   width: 100%;
 }
 .footer-menu {
@@ -442,6 +443,15 @@ html {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .footer-links__logo-button {
+    max-width: 200px;
+  }
+  .footer-copyright {
+    max-width: 655px;
+  }
+}
+
 @media screen and (max-width: 980px) {
   .footer-background {
     height: 390px;
@@ -455,6 +465,9 @@ html {
   .footer-links__logo-button {
     max-width: 102px;
     width: 100%;
+  }
+  .footer-links__links {
+    max-width: 570px;
   }
   .donate__button--left {
     display: none;
@@ -641,16 +654,17 @@ html {
     transform: scale(0.8);
   }
   .footer-background {
-    height: 816px;
+    height: 805px;
     background-size: inherit;
   }
   .footer {
-    height: calc(100vh + 85px);
+    height: 742px;
   }
   .footer-content {
     display: flex;
     flex-direction: column;
     text-align: center;
+    align-items: center;
   }
   .footer-links__logo-button {
     align-self: center;
@@ -691,6 +705,7 @@ html {
     padding: 0;
     order: 1;
     position: relative;
+    max-width: 600px;
   }
   .yd-logo {
     padding-left: 60px;
@@ -726,7 +741,8 @@ html {
     order: 1;
     margin: -13px 60px 8px;
   }
-  .footer-copy-text {
-    width: 90%;
+  .footer-copyright {
+    width: 64%;
+    margin: 0 auto;
   }
 }
